feat:button transparent

--- a/src/components/button/styles.module.css
+++ b/src/components/button/styles.module.css
@@ -3,7 +3,7 @@
     border-radius: 30px;
     border: 0;
     height: 55px;
-    background-color: #c9ab00;
+    background-color: #c9ab00bb;
     font-size: 16px;
     font-weight: 600;
     transition: box-shadow 0.2s;
